[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nitpick-ai"
version = "0.1.0"
description = "Interactive debugging benchmark for AI agents — find bugs, run code, submit fixes, get graded"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
]
ui = [
    "gradio>=4.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["server", "agent"]

[tool.pyright]
venvPath = "."
extraPaths = ["."]
pythonPlatform = "Windows"
executionEnvironments = [
  { root = ".", extraPaths = ["."] }
]
